--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,16 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.0",
         "bezhansalleh/filament-shield": "^3.3",
+        "doctrine/dbal": "^4.2",
         "filament/filament": "^3.2",
         "filament/infolists": "^3.2",
         "filament/notifications": "^3.2",
